--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,40 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ngx-rclt-cards": [
+        "dist/ngx-rclt-cards"
+      ],
+      "ngx-rclt-cards/*": [
+        "dist/ngx-rclt-cards/*"
+      ],
+      "ngx-rclt": [
+        "dist/ngx-rclt",
+        "dist/ngx-rclt"
+      ],
+      "ngx-rclt/*": [
+        "dist/ngx-rclt/*",
+        "dist/ngx-rclt/*"
+      ],
+      "ngx-util": [
+        "dist/ngx-util"
+      ],
+      "ngx-util/*": [
+        "dist/ngx-util/*"
+      ],
+      "ngx-util-utilitarios": [
+        "dist/ngx-util-utilitarios"
+      ],
+      "ngx-util-utilitarios/*": [
+        "dist/ngx-util-utilitarios/*"
+      ],
+      "ngx-rclt-utilitarios": [
+        "dist/ngx-rclt-utilitarios"
+      ],
+      "ngx-rclt-utilitarios/*": [
+        "dist/ngx-rclt-utilitarios/*"
+      ]
+    }
   }
 }
