--- a/projects/ngx-rclt-utilitarios/package.json
+++ b/projects/ngx-rclt-utilitarios/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ngx-rclt-utilitarios",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/core": "^7.2.0",
+    "bootstrap": "^4.3.1"
   }
 }
