--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ngx/common": "file:dist/ngx-common",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ngx-utilitario-rclt": "file:dist/ngx-utilitario-rclt",
     "rxjs": "~6.3.3",
     "scss-bundle": "^2.5.1",
     "tslib": "^1.9.0",
