--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "src/styles.css",
-              "src/themes_custom.scss"
+              "src/themes_custom.scss",
+              "src/styles_custom.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
