--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ngx-utilitario-rclt",
   "version": "0.0.1",
+  "author": "renato cohaila la torre",
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
