--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build_lib": "grunt bump && ng build ngx-utilitario-rclt",
     "npm_pack": "cd dist/ngx-utilitario-rclt && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "publish": "npm run package && cd dist/ngx-utilitario-rclt " 
+    "publish": "npm run build_lib && cd dist/ngx-utilitario-rclt npm publish" 
   },
   "repository": {
     "type": "git",
