--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "renatoclt",
-  "version": "0.2.14",
+  "version": "0.2.15",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,7 +11,7 @@
     "build_lib": "grunt bump && ng build ngx-utilitario-rclt",
     "npm_pack": "cd dist/ngx-utilitario-rclt && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "publish": "npm run build_lib && cd dist/ngx-utilitario-rclt npm publish" 
+    "publish": "npm run build_lib && cd dist/ngx-utilitario-rclt && npm publish" 
   },
   "repository": {
     "type": "git",
