--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build_lib": "grunt bump && ng build ngx-utilitario-rclt",
     "npm_pack": "cd dist/ngx-utilitario-rclt && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
-    "publish": "npm run build_lib && cd dist/ngx-utilitario-rclt && npm publish"
+    "publish": "npm run build_lib && cd dist/ngx-utilitario-rclt && npm publish",
+    "packagr": "ng-packagr -p ng-package.json"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "@angular/router": "~7.2.0",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.5.4",
+    "eslint-cli": "^1.1.1",
     "font-awesome": "^4.7.0",
     "grunt": "^1.0.4",
     "grunt-contrib-uglify": "^4.0.1",
@@ -61,7 +63,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
+    "ng-packagr": "^4.7.1",
     "protractor": "~5.4.0",
     "ts-node": "^7.0.1",
     "tsickle": ">=0.34.0",
