--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngx-utilitario-rclt",
-  "version": "0.3.20",
+  "version": "0.3.37",
   "author": "renato cohaila la torre",
-  "description": "Esta es una libreria que contiene los utilitarios que se pueden utilizar en diferentes proyectos.",
-  "keywords" :["Angular","Utilitario"],
+  "description": "Esta es una libreria que contiene los utilitarios que puede necesitar cualquier proyectos como cards, fechas, chat, etc.",
+  "keywords" :["Angular","Utilitario","fecha","chat"],
   "repository": {
     "type" : "git",
     "url" : "https://github.com/renatoclt/libreria"
@@ -11,5 +11,8 @@
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
+  },
+  "dependencies": {
+    "moment": "^2.24.0"
   }
 }
