--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "renatoclt",
   "version": "0.2.21",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,34 +23,36 @@
     "url": "https://github.com/renatoclt/libreria"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.14",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@ngtools/webpack": "^8.0.3",
     "angular-font-awesome": "^3.1.2",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.9",
     "eslint-cli": "^1.1.1",
     "font-awesome": "^4.7.0",
     "grunt": "^1.0.4",
     "grunt-contrib-uglify": "^4.0.1",
-    "moment": "^2.24.0",
+    "jquery": "^3.4.1",
+    "js-yaml": "^3.13.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "scss-bundle": "^2.5.1",
-    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/build-ng-packagr": "^0.13.9",
+    "@angular/cli": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/language-service": "^7.2.15",
     "@compodoc/compodoc": "^1.1.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -59,7 +62,6 @@
     "grunt-bump": "^0.8.0",
     "grunt-bump-version": "^0.2.1",
     "grunt-contrib-jshint": "^2.1.0",
-    "grunt-version-bump": "^1.0.8",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -68,12 +70,12 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "moment": "^2.24.0",
-    "ng-packagr": "^4.7.1",
+    "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
     "ts-node": "^7.0.1",
     "tsickle": ">=0.34.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "^3.5.2"
   }
 }
