--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "url": "https://github.com/renatoclt/libreria"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.15",
+    "@angular/animations": "^8.0.1",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "@ngtools/webpack": "^8.0.3",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.6.9",
@@ -43,22 +43,22 @@
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "popper.js": "^1.15.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.2",
     "scss-bundle": "^2.5.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular-devkit/build-ng-packagr": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.800.3",
+    "@angular-devkit/build-ng-packagr": "^0.800.3",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
-    "@angular/language-service": "^7.2.15",
+    "@angular/language-service": "^8.0.1",
     "@compodoc/compodoc": "^1.1.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "bootstrap": "^4.3.1",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.1.0",
     "grunt-bump": "^0.8.0",
     "grunt-bump-version": "^0.2.1",
     "grunt-contrib-jshint": "^2.1.0",
@@ -76,6 +76,6 @@
     "tsickle": ">=0.34.0",
     "tslib": "^1.10.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.4.2"
   }
 }
