--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@
 # dependencies
 /node_modules
 
+# sonarQube
+/.scannerwork
+
+#documentacion
+/documentation
+
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
