--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,20 +1,20 @@
 # required metdata
 sonar.projectKey=library-test-app
-sonar.projectName=ngx-utilitario-rclt
+sonar.projectName=tbusca
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 
 # path to srouce directories
 sonar.sources=src/app
-sonar.tests=src/app
+sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts
 
 # excludes
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.exclusions=**/node_modules/**
 
 # coverage reporting
-sonar.javascript.lcov.reportPaths=src/coverage/lcov.info
+# sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 #Typescript
 sonar.ts.tslint.configPath=tslint.json
-sonar.ts.coverage.lcovReportPath=test-results/coverage/coverage.lcov
+sonar.typescript.lcov.reportPaths=coverage/renatoclt/lcov.info
