--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "red": "ng serve --host 192.168.1.61",
@@ -74,6 +74,7 @@
     "moment": "^2.24.0",
     "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
+    "sonar-scanner": "^3.1.0",
     "ts-node": "^7.0.1",
     "tsickle": ">=0.34.0",
     "tslib": "^1.10.0",
