--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "moment": "^2.24.0",
     "ng-packagr": "^5.3.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "protractor": "~5.4.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "^7.0.1",
