--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-utilitario-rclt",
-  "version": "0.4.14",
+  "version": "0.4.24",
   "author": "renato cohaila la torre",
   "description": "Esta es una libreria que contiene los utilitarios que puede necesitar cualquier proyectos como cards, fechas, chat, etc.",
   "keywords" :["Angular","Utilitario","fecha","chat"],
@@ -9,10 +9,11 @@
     "url" : "https://github.com/renatoclt/libreria"
   },
   "peerDependencies": {
-    "@angular/common": "^7.2.0",
-    "@angular/core": "^7.2.0"
+    "@angular/common": "^8.0.1",
+    "@angular/core": "^8.0.1"
   },
   "dependencies": {
+    "angular-font-awesome": "^3.1.2",
     "moment": "^2.24.0"
   }
 }
