--- a/angular.json
+++ b/angular.json
@@ -29,11 +29,16 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
               "src/styles.css",
               "src/themes_custom.scss",
               "src/styles_custom.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -116,7 +121,7 @@
     "renatoclt-e2e": {
       "root": "e2e/",
       "projectType": "application",
-      "prefix": "",
+      "prefix": "ngx-utilitario",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
