--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
     "@ngtools/webpack": "^8.0.3",
+    "@types/owl.carousel": "^2.3.1",
     "angular-font-awesome": "^3.1.2",
     "core-js": "^2.6.9",
     "eslint-cli": "^1.1.1",
@@ -44,6 +45,8 @@
     "grunt-contrib-uglify": "^4.0.1",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
+    "ngx-owl-carousel": "^2.0.7",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.2",
     "scss-bundle": "^2.5.1",
@@ -58,6 +61,7 @@
     "@compodoc/compodoc": "^1.1.9",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.30",
     "@types/node": "~8.9.4",
     "bootstrap": "^4.3.1",
     "codelyzer": "^5.1.0",
