--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,9 @@
               "node_modules/font-awesome/css/font-awesome.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.green.min.css",
               "src/styles.css",
-              "src/themes_custom.scss",
-              "src/styles_custom.scss"
+              "src/themes_custom.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
