--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-utilitario-rclt",
-  "version": "0.5.1",
+  "version": "0.5.3",
   "author": "renato cohaila la torre",
   "description": "Esta es una libreria que contiene los utilitarios que puede necesitar cualquier proyectos como cards, fechas, chat, etc.",
   "keywords" :["Angular","Utilitario","fecha","chat"],
@@ -10,14 +10,20 @@
   },
   "peerDependencies": {
     "@angular/common": "^8.0.1",
-    "@angular/core": "^8.0.1",
-    "@types/jquery": "^3.3.30"
+    "@angular/core": "^8.0.1"
   },
   "dependencies": {
     "angular-font-awesome": "^3.1.2",
     "moment": "^2.24.0",
     "@types/owl.carousel": "^2.3.1",
     "ngx-owl-carousel": "^2.0.7",
-    "owl.carousel": "^2.3.4"
+    "owl.carousel": "^2.3.4",
+    "@angular/material": "^7.3.7",
+    "@angular/cdk": "^7.3.7"
+  },
+  "devDependencies": {
+    "jquery": "^3.4.1",
+    "@types/jquery": "^3.3.30",
+    "ngx-perfect-scrollbar": "^8.0.0"
   }
 }
