--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/mapbox-gl/dist/mapbox-gl.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.theme.green.min.css",
