--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-uglify": "^4.0.1",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
+    "mapbox-gl": "^1.1.0",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.15.0",
@@ -58,7 +59,7 @@
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
-    "@compodoc/compodoc": "^1.1.9",
+    "@compodoc/compodoc": "^1.1.10",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.30",
