--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -19,7 +19,8 @@
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
     "@angular/material": "^7.3.7",
-    "@angular/cdk": "^7.3.7"
+    "@angular/cdk": "^7.3.7",
+    "mapbox-gl": "^1.1.0"
   },
   "devDependencies": {
     "jquery": "^3.4.1",
