--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/chart.js/dist/Chart.js",
               "./node_modules/owl.carousel/dist/owl.carousel.min.js"
             ],
             "es5BrowserSupport": true
