--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-utilitario-rclt",
-  "version": "0.6.15",
+  "version": "0.6.20",
   "author": "renato cohaila la torre",
   "description": "Esta es una libreria que contiene los utilitarios que puede necesitar cualquier proyectos como cards, fechas, chat, etc.",
   "keywords" :["Angular","Utilitario","fecha","chat"],
@@ -20,7 +20,9 @@
     "owl.carousel": "^2.3.4",
     "@angular/material": "^7.3.7",
     "@angular/cdk": "^7.3.7",
-    "mapbox-gl": "^1.1.0"
+    "mapbox-gl": "^1.1.0",
+    "ng2-charts": "^2.3.0",
+    "chart.js": "^2.8.0"
   },
   "devDependencies": {
     "jquery": "^3.4.1",
