agregando pattern 7 1, eliminando estilos del carousel, eliminanndo otros estilos globlaes para solo usar sass

--- a/angular.json
+++ b/angular.json
@@ -30,11 +30,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/mapbox-gl/dist/mapbox-gl.css",
-              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
-              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
-              "./node_modules/owl.carousel/dist/assets/owl.theme.green.min.css",
-              "src/styles.css",
-              "src/themes_custom.scss"
+              "src/stylesheets/main.scss"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
