--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,7 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/chart.js/dist/Chart.js",
-              "./node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "./node_modules/chart.js/dist/Chart.js"
             ],
             "es5BrowserSupport": true
           },
