--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "font-awesome": "^4.7.0",
     "grunt": "^1.0.4",
     "grunt-contrib-uglify": "^4.0.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "mapbox-gl": "^1.1.0",
