--- a/projects/ngx-utilitario-rclt/package.json
+++ b/projects/ngx-utilitario-rclt/package.json
@@ -1,13 +1,12 @@
 {
   "name": "ngx-utilitario-rclt",
-  "version": "0.6.26",
+  "version": "0.6.32",
   "author": "renato cohaila la torre",
   "description": "Esta es una libreria que contiene los utilitarios que puede necesitar cualquier proyectos como cards, fechas, chat, etc.",
   "keywords": [
     "Angular",
-    "Utilitario",
-    "fecha",
-    "chat"
+    "number to array",
+    "highlight"
   ],
   "repository": {
     "type": "git",
@@ -28,6 +27,7 @@
     "@angular/cdk": "^7.3.7",
     "mapbox-gl": "^1.1.0",
     "ng2-charts": "^2.3.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "chart.js": "^2.8.0"
   },
   "devDependencies": {
