--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "red": "ng serve --host 192.168.1.61",
-    "build_lib": "grunt bump && ng build ngx-utilitario-rclt",
+    "build_lib": "grunt bump && ng build ngx-utilitario-rclt && npm run bundle-styles",
     "npm_pack": "cd dist/ngx-utilitario-rclt && npm pack",
     "package": "npm run build_lib && npm run npm_pack",
     "bundle-styles": "scss-bundle -c scss-bundle.config.json --includePaths",
