--- a/package.json
+++ b/package.json
@@ -91,6 +91,6 @@
     "tslib": "^1.10.0",
     "tslint": "~5.11.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.4.2"
+    "typescript": "~3.4.2"
   }
 }
